# emailgenius

./: .gitignore  README.md  pyproject.toml
docs/: 2026-02-11_matrice-claim.csv  2026-02-11_rapporto-fact-check-e-validazione.md  2026-02-11_sintesi-esecutiva.md  2026-02-11_whitepaper-aggiornato-factchecked.md  parent_profile_contributofacile.yaml
src/emailgenius/: __init__.py  browser.py  campaign.py  cli.py  config.py  enrichment.py  extraction.py  guardrails.py  knowledge.py  leads.py  llm.py  outreach.py  pipeline.py  profiles.py  scoring.py  search.py  sheets.py  storage.py  types.py  utils.py
src/emailgenius.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_campaign.py  test_extraction.py  test_guardrails.py  test_leads.py  test_llm.py  test_profiles.py  test_scoring.py  test_search.py
